--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./public//assets/images/profilePhoto.jpg"
+      href="./public/assets/images/logo.jpeg"
     />
     <title>Anuj Kesarwani</title>
   </head>
